Added cloudbuild configs. Upgraded to JDK 11 and SpringBoot 2.1.1.RELEASE