@@ -1,16 +1,14 @@
-FROM openjdk:10.0.1-10-jre
+FROM openjdk:11-jre-slim-sid
 
-ARG OUTPUT_PATH
-ARG BUILT_ARTIFACT
+ARG ARTIFACT_VERSION
 
-ENV BUILT_ARTIFACT ${BUILT_ARTIFACT}
-
-COPY ${OUTPUT_PATH}/${BUILT_ARTIFACT} /opt/${BUILT_ARTIFACT}
+ENV ARTIFACT enquiry-handler-${ARTIFACT_VERSION}.jar
 
 EXPOSE 8080
 
-CMD java -Xms50m -Xmx100m --add-modules java.xml.bind \
+COPY /target/${ARTIFACT} /opt/${ARTIFACT}
+
+CMD java -Xms50m -Xmx100m \
     -Dspring.config.additional-location=file:/etc/config/ \
-    -Dspring.profiles.active=${ENV_SPRING_PROFILES_ACTIVE} \
     -Duser.timezone=UTC \
-    -jar /opt/${BUILT_ARTIFACT}
+    -jar /opt/${ARTIFACT}
