@@ -5,16 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.2.RELEASE</version>
+		<version>2.1.2.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<groupId>uk.co.vhome.clubbed</groupId>
 	<artifactId>enquiry-handler</artifactId>
-	<version>5.1.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
-
-	<name>Enquiry Handler</name>
+	<version>5.2.0-SNAPSHOT</version>
 
 	<url>https://github.com/pjverity/${project.artifactId}/wiki</url>
 
@@ -25,15 +22,9 @@
 	</scm>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-		<maven.compiler.source>10</maven.compiler.source>
-		<maven.compiler.target>10</maven.compiler.target>
-		<java.version>10</java.version>
+		<java.version>11</java.version>
 
 		<axon.version>3.2</axon.version>
-		<junit-jupiter.version>5.2.0</junit-jupiter.version>
 	</properties>
 
 	<dependencies>
@@ -44,7 +35,7 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
-		<!-- Expose Srping Data Repositories as REST endpoints-->
+		<!-- Expose Spring Data Repositories as REST endpoints-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
@@ -110,6 +101,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- In-memory database -->
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -137,7 +134,7 @@
 			<plugin>
 				<groupId>com.amashchenko.maven.plugin</groupId>
 				<artifactId>gitflow-maven-plugin</artifactId>
-				<version>1.10.0</version>
+				<version>1.11.0</version>
 				<configuration>
 					<commitMessages>
 						<featureStartMessage>[gitflow-maven-plugin] Updated feature branch to version @{version}</featureStartMessage>
@@ -156,82 +153,15 @@
 			</plugin>
 
 			<plugin>
-				<groupId>com.spotify</groupId>
-				<artifactId>dockerfile-maven-plugin</artifactId>
-				<version>1.3.7</version>
-				<executions>
-					<execution>
-						<id>default</id>
-						<goals>
-							<goal>build</goal>
-							<goal>push</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
-					<repository>pjverity/${project.artifactId}</repository>
-					<tag>${project.version}</tag>
-					<buildArgs>
-						<OUTPUT_PATH>target</OUTPUT_PATH>
-						<BUILT_ARTIFACT>${project.build.finalName}.jar</BUILT_ARTIFACT>
-					</buildArgs>
-				</configuration>
-				<dependencies>
-					<!-- Required to work with Java 9 -->
-					<dependency>
-						<groupId>org.codehaus.plexus</groupId>
-						<artifactId>plexus-archiver</artifactId>
-						<version>3.4</version>
-					</dependency>
-					<dependency>
-						<groupId>javax.activation</groupId>
-						<artifactId>javax.activation-api</artifactId>
-						<version>1.2.0</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.21.0</version>
-				<configuration>
-					<argLine>--add-modules java.xml.bind</argLine>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.junit.platform</groupId>
-						<artifactId>junit-platform-surefire-provider</artifactId>
-						<version>1.2.0</version>
-					</dependency>
-					<dependency>
-						<groupId>org.junit.jupiter</groupId>
-						<artifactId>junit-jupiter-engine</artifactId>
-						<version>${junit-jupiter.version}</version>
-					</dependency>
-				</dependencies>
+				<version>2.22.0</version>
 			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.21.0</version>
-				<configuration>
-					<argLine>--add-modules java.xml.bind</argLine>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.junit.platform</groupId>
-						<artifactId>junit-platform-surefire-provider</artifactId>
-						<version>1.2.0</version>
-					</dependency>
-					<dependency>
-						<groupId>org.junit.jupiter</groupId>
-						<artifactId>junit-jupiter-engine</artifactId>
-						<version>${junit-jupiter.version}</version>
-					</dependency>
-				</dependencies>
+				<version>2.22.0</version>
 				<executions>
 					<execution>
 						<goals>
